cart show and quantity increment and decrement added and 404 page added

--- a/views/users/product-detail.ejs
+++ b/views/users/product-detail.ejs
@@ -294,7 +294,7 @@
 			</a>
 
 			<span class="stext-109 cl4">
-				Lightweight Jacket
+				<%= product.name %>
 			</span>
 		</div>
 	</div>
@@ -365,6 +365,7 @@
 							<%= product.category %>
 						</p>
 
+						
 						<!--  -->
 						<div class="p-t-33">
 							<div class="flex-w flex-r-m p-b-10">
@@ -386,7 +387,7 @@
 								</div>
 							</div>
 
-							<div class="flex-w flex-r-m p-b-10">
+							<!-- <div class="flex-w flex-r-m p-b-10">
 								<div class="size-203 flex-c-m respon6">
 									Color
 								</div>
@@ -403,7 +404,7 @@
 										<div class="dropDownSelect2"></div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 							<div class="flex-w flex-r-m p-b-10">
 								<div class="size-204 flex-w flex-m respon6-next">
@@ -420,8 +421,9 @@
 										</div>
 									</div>
 
-									<button
-										class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
+									
+									<button type="button" onclick="addToCart('<%= product._id %>')"
+										class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail" >
 										Add to cart
 									</button>
 								</div>
@@ -645,7 +647,7 @@
 			</div>
 		</div>
 
-		<div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
+		<!-- <div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
 			<span class="stext-107 cl6 p-lr-25">
 				SKU: JAK-01
 			</span>
@@ -653,25 +655,25 @@
 			<span class="stext-107 cl6 p-lr-25">
 				Categories: Jacket, Men
 			</span>
-		</div>
+		</div> -->
 	</section>
 
 
 	<!-- Related Products -->
-	<section class="sec-relate-product bg0 p-t-45 p-b-105">
+	<!-- <section class="sec-relate-product bg0 p-t-45 p-b-105">
 		<div class="container">
 			<div class="p-b-45">
 				<h3 class="ltext-106 cl5 txt-center">
 					Related Products
 				</h3>
-			</div>
+			</div> -->
 
 			<!-- Slide2 -->
-			<div class="wrap-slick2">
+			<!-- <div class="wrap-slick2">
 				<div class="slick2">
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-01.jpg" alt="IMG-PRODUCT">
 
@@ -705,9 +707,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-02.jpg" alt="IMG-PRODUCT">
 
@@ -741,9 +743,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-03.jpg" alt="IMG-PRODUCT">
 
@@ -777,9 +779,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-04.jpg" alt="IMG-PRODUCT">
 
@@ -813,9 +815,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-05.jpg" alt="IMG-PRODUCT">
 
@@ -849,9 +851,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-06.jpg" alt="IMG-PRODUCT">
 
@@ -885,9 +887,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-07.jpg" alt="IMG-PRODUCT">
 
@@ -921,9 +923,9 @@
 						</div>
 					</div>
 
-					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
+					<div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15"> -->
 						<!-- Block2 -->
-						<div class="block2">
+						<!-- <div class="block2">
 							<div class="block2-pic hov-img0">
 								<img src="images/product-08.jpg" alt="IMG-PRODUCT">
 
@@ -959,7 +961,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<%- include('../layouts/footer.ejs') %>
@@ -972,7 +974,7 @@
 	</div>
 
 	<!-- Modal1 -->
-	<div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
+	<!-- <div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
 		<div class="overlay-modal1 js-hide-modal1"></div>
 
 		<div class="container">
@@ -1039,10 +1041,10 @@
 							<p class="stext-102 cl3 p-t-23">
 								Nulla eget sem vitae eros pharetra viverra. Nam vitae luctus ligula. Mauris consequat
 								ornare feugiat.
-							</p>
+							</p> -->
 
 							<!--  -->
-							<div class="p-t-33">
+							<!-- <div class="p-t-33">
 								<div class="flex-w flex-r-m p-b-10">
 									<div class="size-203 flex-c-m respon6">
 										Size
@@ -1102,10 +1104,10 @@
 										</button>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 							<!--  -->
-							<div class="flex-w flex-m p-l-100 p-t-40 respon7">
+							<!-- <div class="flex-w flex-m p-l-100 p-t-40 respon7">
 								<div class="flex-m bor9 p-r-10 m-r-11">
 									<a href="#"
 										class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100"
@@ -1133,7 +1135,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<!--===============================================================================================-->
@@ -1210,15 +1212,20 @@
 
 		/*---------------------------------------------*/
 
-		$('.js-addcart-detail').each(function () {
-			var nameProduct = $(this).parent().parent().parent().parent().find('.js-name-detail').html();
-			$(this).on('click', function () {
-				swal(nameProduct, "is added to cart !", "success");
-			});
-		});
+	// $('.js-addcart-detail').each(function () {
+	// 		var nameProduct = $(this).parent().parent().parent().parent().find('.js-name-detail').html();
+	// 		$(this).on('click', function () {
+	// 			swal(nameProduct, "is added to cart !", "success");
+	// 		});
+			
+	// 	});
+
+	
+
 
 	</script>
 	<!--===============================================================================================-->
+	
 	<script src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 	<script>
 		$('.js-pscroll').each(function () {
@@ -1238,10 +1245,44 @@
 	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
+	<!--===============================================================================================-->
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+	
+	<script>
+		async function addToCart(productId) {
+			console.log(productId);
+			console.log('hello');
+			try {
+				const response = await axios.post('/productDetails/cart', { productId });
+				console.log(response);
+				if (response.data.success) {
+					console.log('kooooi');
+					await Swal.fire({
+						icon: "success",
+						title: "Success",
+						text: response.data.message
+					}).then(() => {
+						window.location.href = `http://localhost:8000/productDetails?productId=${productId}`;
+					})
+				} else {
+					await Swal.fire({
+						icon: "error",
+						title: "Error",
+						text: response.data.message
+					})
+					window.location.href = `http://localhost:8000/productDetails?productId=${productId}`;
+				}
+			} catch (error) {
+				console.error("Error occurred:", error);
+			}
+		}
+	</script>
 
 
+<!-- image zoom its not working -->
 
-
+<!--
 	<script>
 		let imageContainer = document.getElementById("image-container");
 		let productImage = document.getElementById("product-iamge");
@@ -1296,10 +1337,10 @@
 				overlay.style.backgroundPosition = posX + "%" + posY + "%";
 
 				mouseOverlay.style.top = y + "px";
-				mouseOverlay.style.left = x + "px"; 
+				mouseOverlay.style.left = x + "px";
 			}
 		})
-	</script>
+	</script> -->
 
 
 
