--- a/views/admin/Products/editProduct.ejs
+++ b/views/admin/Products/editProduct.ejs
@@ -181,7 +181,7 @@
                                     <h4 class="card-title">Edit Product</h4>
                                     <p class="card-description"> </p>
 
-                                    <form method="post" action="/admin/editProduct?id=<%= product._id %>"
+                                    <form method="post" id="form" action="/admin/editProduct?id=<%= product._id %>"
                                         class="forms-sample" enctype="multipart/form-data"
                                         onsubmit="edit('<%= product._id%>')">
 
@@ -208,17 +208,17 @@
                                             <div class="image-container">
 
                                                 <% product.image.forEach(function(image) { %>
-                                                    <div class="image-item"
-                                                        style="position: relative; display: inline-block;">
-                                                        <img src="/Photos/product/<%= image %>" alt="Product Image"
-                                                            class="img-fluid"
+                                                    <div class="image-item" style="position: relative; display: inline-block;">
+                                                        <img src="/Photos/product/<%= image %>" alt="Product Image" class="img-fluid"
                                                             style="max-width: 200px; max-height: 200px; margin-right: 10px;">
                                                         <button type="button" class="close-button"
-                                                            style="position: absolute; top: 5px; margin-right: 5px; right: 10px; background:red; border: none; outline: none; color: white;">
+                                                            style="position: absolute; top: 5px; margin-right: 5px; right: 10px; background:red; border: none; outline: none; color: white;"
+                                                            data-image="<%= image %>">
                                                             X
                                                         </button>
                                                     </div>
-                                                    <% }); %>
+                                                <% }); %>
+                                                
                                             </div>
                                         </div>
 
@@ -242,13 +242,14 @@
                                             <label>Categories</label>
                                             <select class="form-control my-custom-dropdown" name="category">
                                                 <% category.forEach(function(cat) { %>
-                                                    <option value="<%= cat.name %>"> <!-- Change value to category name -->
+                                                    <option value="<%= cat.name %>">
+                                                        <!-- Change value to category name -->
                                                         <%= cat.name %>
                                                     </option>
-                                                <% }); %>
+                                                    <% }); %>
                                             </select>
                                         </div>
-                                        
+
 
 
                                         <div class="form-group">
@@ -262,7 +263,8 @@
 
                                         <div class="form-group">
                                             <label>Description</label>
-                                            <input class="form-control" name="description" id="description" rows="4" value="<%= product.description %>" required></input>
+                                            <input class="form-control" name="description" id="description" rows="4"
+                                                value="<%= product.description %>" required></input>
                                         </div>
 
 
@@ -272,110 +274,136 @@
 
 
                                         </select>
+                                    </form>
                                 </div>
-
-                                </form>
                             </div>
                         </div>
                     </div>
-
-                    <% if(typeof message !=='undefined' ){ %>
-                        <p>
-                            <%= message %>
-                        </p>
-                        <% } %>
-
                 </div>
-                <!-- content-wrapper ends -->
-                <!-- partial:../../partials/_footer.html -->
-                <footer class="footer">
-                    <div class="container-fluid clearfix">
-                        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">kiona ©
-                            kiona.com 2020</span>
-                        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> <a
-                                href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">kiona
-                                admin</a> from kiona.com</span>
-                    </div>
-                </footer>
-                <!-- partial -->
+            </div>
+        </div>
+    </div>
+
+    <% if(typeof message !=='undefined' ){ %>
+        <p>
+            <%= message %>
+        </p>
+        <% } %>
+
+            </div>
+            <!-- content-wrapper ends -->
+            <!-- partial:../../partials/_footer.html -->
+            <footer class="footer">
+                <div class="container-fluid clearfix">
+                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">kiona ©
+                        kiona.com 2020</span>
+                    <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> <a
+                            href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">kiona
+                            admin</a> from kiona.com</span>
+                </div>
+            </footer>
+            <!-- partial -->
             </div>
             <!-- main-panel ends -->
-        </div>
-        <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="../../admin/js/off-canvas.js"></script>
-    <script src="../../admin/js/hoverable-collapse.js"></script>
-    <script src="../../admin/js/misc.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page -->
-    <script src="../../admin/js/file-upload.js"></script>
-    <!-- End custom js for this page -->
+            </div>
+            <!-- page-body-wrapper ends -->
+            </div>
+            <!-- container-scroller -->
+            <!-- plugins:js -->
+            <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
+            <!-- endinject -->
+            <!-- Plugin js for this page -->
+            <!-- End plugin js for this page -->
+            <!-- inject:js -->
+            <script src="../../admin/js/off-canvas.js"></script>
+            <script src="../../admin/js/hoverable-collapse.js"></script>
+            <script src="../../admin/js/misc.js"></script>
+            <!-- endinject -->
+            <!-- Custom js for this page -->
+            <script src="../../admin/js/file-upload.js"></script>
+            <!-- End custom js for this page -->
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var cancelClicked = false; // Flag to track cancel button click
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    var cancelClicked = false; // Flag to track cancel button click
 
-            var closeButtons = document.querySelectorAll('.close-button');
-            closeButtons.forEach(function (button) {
-                button.addEventListener('click', function () {
-                    if (!cancelClicked) {
-                        var imageItem = button.closest('.image-item');
-                        imageItem.remove();
+                    var closeButtons = document.querySelectorAll('.close-button');
+                    closeButtons.forEach(function (button) {
+                        button.addEventListener('click', function () {
+                            if (!cancelClicked) {
+                                var imageItem = button.closest('.image-item');
+                                imageItem.remove();
+                            }
+                        });
+                    });
+
+                    // Add event listener to cancel button
+                    var cancelButton = document.querySelector('.btn-light');
+                    cancelButton.addEventListener('click', function () {
+                        cancelClicked = true; // Set flag to true when cancel button is clicked
+                    });
+                });
+
+                document.getElementById("form").addEventListener("submit", async (e) => {
+                    e.preventDefault();
+
+                    const formElement = document.getElementById("form");
+                    const formData = new FormData(formElement);
+
+                    const productId = formData.get("product_id");
+
+                    const confirmation = await Swal.fire({
+                        title: 'Are you sure?',
+                        text: 'You won\'t be able to revert this!',
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'Yes, Update Product!'
+                    });
+
+                    if (!confirmation.isConfirmed) {
+                        return;
+                    }
+
+                    try {
+                        const response = await axios.post(`/admin/editProduct?id=${productId}`, formData);
+
+                        if (response.data.success) {
+                            await Swal.fire({
+                                icon: 'success',
+                                title: 'Update Product!',
+                                text: response.data.message
+                            }).then(() => {
+                                window.location.href = `/admin/product`;
+                            });
+                        } else {
+                            await Swal.fire({
+                                icon: 'error',
+                                title: 'Error',
+                                text: response.data.message
+                            });
+                            window.location.href = `/admin/editProduct?id=${productId}`;
+                        }
+                    } catch (error) {
+                        console.error("Error updating Address: ", error.message);
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'There was an error updating the Product'
+                        });
                     }
                 });
-            });
-
-            // Add event listener to cancel button
-            var cancelButton = document.querySelector('.btn-light');
-            cancelButton.addEventListener('click', function () {
-                cancelClicked = true; // Set flag to true when cancel button is clicked
-            });
-        });
-
-        // async function edit(id) {
-        //     try {
-        //         const response = await axios.post(`http://localhost:8000/admin/editProduct?id=${id}`);
-        //         if (response.data.success) {
-        //             await Swal.fire({
-        //                 icon: 'success',
-        //                 title: 'Success',
-        //                 text: response.data.message
-        //             });
-        //             // Redirect after success
-        //             window.location.href = `/admin/editProduct?id=${id}`;
-        //         } else {
-        //             await Swal.fire({
-        //                 icon: 'error',
-        //                 title: 'Error',
-        //                 text: response.data.message
-        //             });
-        //             // Redirect after error
-        //             window.location.href = `/admin/editProduct?id=${id}`;
-        //         }
-        //     } catch (error) {
-        //         console.error('Error:', error);
-        //         // Handle errors
-        //         await Swal.fire({
-        //             icon: 'error',
-        //             title: 'Error',
-        //             text: 'An error occurred while processing your request.'
-        //         });
-        //     }
-        // }
-
-    </script>
+                
+            </script>
 
 
 
