--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -57,13 +57,13 @@
 
 
 
-						<a href="#" class="flex-c-m trans-04 p-lr-25">
-							EN
+						<a href="/" class="flex-c-m trans-04 p-lr-25">
+							Home
 						</a>
 
 						<% if(user){%>
 
-							<a href="#" class="flex-c-m trans-04 p-lr-25">
+							<a href="/userProfile" class="flex-c-m trans-04 p-lr-25">
 								My Account
 							</a>
 
